[package]
name = "DOS-Emulator"
version = "0.1.0"
authors = ["Alexander Meißner <AlexanderMeissner@gmx.net>"]
edition = "2018"

[dependencies]
strum = "0.17.1"
strum_macros = "0.17.1"
chrono = "0.4.10"
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.5"
termion = "1.5.4"
