[package]
name = "dos-emulator"
description = "Emulator of the IBM PC running DOS written in Rust"
repository = "https://github.com/Lichtso/DOS-Emulator"
authors = ["Alexander Meißner <AlexanderMeissner@gmx.net>"]
license = "MIT"
version = "0.1.0"
edition = "2018"
build = "src/build.rs"

[badges]
travis-ci = { repository = "Lichtso/DOS-Emulator", branch = "master" }

[dependencies]
strum = "0.17.1"
strum_macros = "0.17.1"
chrono = "0.4.10"
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.5"
libc = "0.2.66"
termion = "1.5.4"
glutin = "0.22.0"
cpal = "0.11.0"

[build-dependencies]
gl_generator = "0.11"
